# games

./: Cargo.toml
.github/workflows/: rust.yml
src/: game.rs  loading_screen.rs  main.rs  menu.rs
src/enums/: mod.rs
src/functions/: mod.rs
src/games/: mod.rs
src/games/boogle/: game.rs
src/games/pong/: game.rs
src/menus/: game_menu.rs  main_menu.rs  mod.rs
src/structs/: mod.rs
