[package]
name = "pong"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.16.1", features = ["jpeg"] }
bevy_framepace = "0.19.1"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
print_stdout = { level = "warn", priority = 1 }
print_stderr = { level = "warn", priority = 1 }
unwrap_used = { level = "warn", priority = 1 }
todo = { level = "warn", priority = 1 }
unimplemented = { level = "warn", priority = 1 }
option_if_let_else = { level = "allow", priority = 1 }
